<resources>
    <string name="app_name">Home controller</string>

    <!-- Fragments ID: text Titles Poistetaan tarvittaessa -->
    <string name="home_id_text">Tämä on home fragment</string>
    <string name="control_id_text">Tämä on control fragment</string>
    <string name="log_id_text">Tämä on log fragment</string>

    <!-- Home fragment strings -->
    <string name="home_sign_text">Oletus koti</string>
    <string name="in_temp_title">Sisä</string>
    <string name="out_temp_title">Ulko</string>
    <string name="home_card_title">Koti/osoite</string>
    <string name="relay_card_title">Releiden tila</string>
    <string name="in_temp_text">-</string>
    <string name="out_temp_text">-</string>
    <string name="in_hum_text">-</string>
    <string name="relay_title">Rele</string>
    <string name="state_title">Tila</string>
    <string name="relay1_title">Rele 1:</string>
    <string name="relay2_title">Rele 2:</string>
    <string name="relay3_title">Rele 3:</string>
    <string name="relay4_title">Rele 4:</string>
    <string name="relay1_state">-</string>
    <string name="relay2_state">-</string>
    <string name="relay3_state">-</string>
    <string name="relay4_state">-</string>

    <!-- Settings fragment strings -->

    <!-- Preference Headers -->
    <string name="messages_header">Messages</string>
    <string name="user_header">Käyttäjä</string>
    <string name="home_header">Koti</string>
    <string name="server_header">Palvelin</string>
    <string name="pir_header">Liikkeentunnistin</string>
    <string name="notifications_header">Ilmoitukset</string>
    <string name="theme_header">Teema</string>

    <!-- Preferences Titles -->
    <string name="signature_title">Nimi</string>
    <string name="home_title">Nimi tai osoite</string>
    <string name="server_title">IP-osoite ja portti</string>
    <string name="pir_title">Liikkeentunnistimen aika</string>
    <string name="theme_title">Yöteema</string>
    <string name="reply_title">Default reply action</string>
    <string name="notifications_title">Sähköposti</string>

    <!-- Preferences Summarys -->
    <string name="emailoff_summary">Sähköposti ilmoitukset pois päältä</string>
    <string name="emailon_summary">Sähköposti ilmoitukset päällä</string>
    <string name="nighton_summary">Yöteema päällä</string>
    <string name="nightoff_summary">Yöteema pois päältä</string>

    <!-- Control fragment strings -->
    <string name="default_address">127.0.0.1:80</string>
    <string name="default_pir">1</string>
    <string name="relay_controls">Releiden hallinta</string>
    <string name="rele_1">Rele 1</string>
    <string name="rele_2">Rele 2</string>

    <!-- Log fragment strings  -->


</resources>