<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.control.ControlFragment">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="90dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/relay_controls"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:padding="20dp"
                    />
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="5dp"
                    android:layout_marginBottom="15dp"
                    >
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="20dp"
                        >
                        <TextView
                            android:id="@+id/rele1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/rele_1"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:layout_marginEnd="180dp"
                            android:layout_marginStart="20dp"
                            />
                        <Button
                            android:id="@+id/btn1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="OFF"
                            android:backgroundTint="#FF0000"
                            >
                        </Button>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="5dp"
                    android:layout_marginBottom="15dp"
                    >
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="20dp"
                        >
                        <TextView
                            android:id="@+id/rele2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/rele_2"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:layout_marginEnd="180dp"
                            android:layout_marginStart="20dp"
                            />
                        <Button
                            android:id="@+id/btn2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="OFF"
                            android:backgroundTint="#FF0000"
                            >
                        </Button>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="5dp"
                    android:layout_marginBottom="15dp"
                    >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="20dp"
                    >
                    <TextView
                        android:id="@+id/rele3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Rele 3"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:layout_marginEnd="180dp"
                        android:layout_marginStart="20dp"
                        />
                    <Switch
                        android:id="@+id/switch1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:thumbTint="@drawable/thumb"
                        tools:ignore="UseSwitchCompatOrMaterialXml"
                        android:scaleX="1.25"
                        />
                </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="5dp"
                    android:layout_marginBottom="15dp"
                    >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="20dp"
                    >
                    <TextView
                        android:id="@+id/rele4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Rele 4"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:layout_marginEnd="180dp"
                        android:layout_marginStart="20dp"
                        />
                    <Switch
                        android:id="@+id/switch2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:thumbTint="@drawable/thumb"
                        tools:ignore="UseSwitchCompatOrMaterialXml"
                        android:scaleX="1.25"
                        />
                </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/controlHomeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="24dp"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_baseline_home_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
